# featurehub

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  gotchas.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: design-prototype.html  font-compare.html  presentation.html
docs/superpowers/plans/: 2026-03-31-tier1-correctness-fixes.md  2026-04-01-tier2-documentation.md  2026-04-02-feature-board.md  2026-04-02-knowledge-base.md  (+22 more)
scripts/: install-cli.mjs  install-github-prs.mjs  rebuild-macos.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  export_import.rs  git.rs  lib.rs  main.rs  paths.rs  storage.rs  terminal.rs
src-tauri/src/claude/: launcher.rs  mod.rs  scanner.rs  session_parser.rs  trust.rs
src-tauri/src/commands/: context.rs  export_import.rs  extensions.rs  features.rs  files.rs  folders.rs  git.rs  groups.rs  ide.rs  knowledge.rs  links.rs  mcp.rs  mod.rs  notes.rs  notifications.rs  plans.rs  repos.rs  search.rs  sessions.rs  settings.rs  skills.rs  storage.rs  tags.rs  tasks.rs  terminal.rs  timeline.rs
src-tauri/src/db/: context.rs  directories.rs  feature_groups.rs  features.rs  files.rs  folders.rs  knowledge.rs  links.rs  mcp_servers.rs  mod.rs  notes.rs  plans.rs  search.rs  sessions.rs  skills.rs  tags.rs  tasks.rs  test_utils.rs
src-tauri/src/extensions/: manifest.rs  mod.rs  scheduler.rs  script_runner.rs  table_provisioner.rs
src-tauri/src/files/: manager.rs  mod.rs  preview.rs
(+114 files in other folders)
